--- a/css/style.css
+++ b/css/style.css
@@ -157,15 +157,16 @@ section {
 .hero-full {
     position: relative;
     width: 100%;
-    min-height: calc(50vh + 70px); /* height에서 min-height로 변경 */
-    margin-top: 0; /* 70px에서 0으로 변경 */
-    padding-top: 70px; /* navbar 높이만큼 padding 추가 */
+    min-height: 60vh; /* height를 min-height로 변경하고 조금 더 크게 */
+    margin-top: 0; /* navbar와 붙이기 */
+    padding-top: 70px; /* navbar 높이만큼 padding */
 
     background-image: url("../images/intro-main.png"),
                       linear-gradient(135deg, #1a5d4a 0%, #2d8b6d 100%);
     background-size: contain, cover;
     background-repeat: no-repeat, no-repeat;
     background-position: center center;
+    background-origin: content-box; /* padding 영역 제외하고 배경 시작 */
 
     display: flex;
     flex-direction: column;
@@ -913,4 +914,5 @@ img {
         padding: 2rem 1.5rem;
     }
 }
+
 
