--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,3 @@
-body {
-    margin: 0;
-    padding: 0;
-}
-
-section {
-    margin: 0;
-    padding: 0;
-}
-
 /* ========================================
    전역 스타일
 ======================================== */
@@ -168,7 +158,7 @@ section {
     position: relative;
     width: 100%;
     min-height: 60vh;
-    margin-top: 0 !important; /* !important로 강제 */
+    margin-top: -10px !important; /* !important로 강제 */
     margin-bottom: 0;
     padding: 0;
     padding-top: 70px; /* navbar 높이만큼만 padding */
@@ -926,7 +916,3 @@ img {
         padding: 2rem 1.5rem;
     }
 }
-
-
-
-
